Misspelled words and details

--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
                 <div class="card">
                     <img src="./img/projects/project_1.png" alt="">
                     <h3 class="card-title">Portfolio site</h3>
-                    <p class="card-description">My custom portfolio site. I built from scratch with React.js</p>
+                    <p class="card-description">My custom portfolio site, built from scratch with React.js</p>
 
                     <div class="card-buttons">
                         <a href="#" class="card-button--site">Site</a>
@@ -103,7 +103,7 @@
                 <div class="card">
                     <img src="./img/projects/project_2.png" alt="">
                     <h3 class="card-title">Tableau Visualization</h3>
-                    <p class="card-description">Data representation that I can make effectively</p>
+                    <p class="card-description">Data representation that I can show based on practicality</p>
                     
                     <div class="card-buttons">
                         <a href="https://public.tableau.com/app/profile/muhammad.aus/vizzes" class="card-button--site">Site</a>
@@ -146,7 +146,7 @@
                     <p class="card-years">2020-present</p>
 
                     <ul class="card-list">
-                        <li class="card-list-item">Software Develoopment in embedded systems</li>
+                        <li class="card-list-item">Software Development in embedded systems</li>
                         <li class="card-list-item">Data Analysis for hydraulics</li>
                     </ul>
                 </div>
