Overhaul button layouts and about text layout

--- a/index.html
+++ b/index.html
@@ -113,18 +113,24 @@
         <!-- ABOUT -->
 
         <section id="about" class="section about">
+
+            <h2>These are my diverse range of projects<br />
+                and improvements over the years:</h2>
+
+            <ul class="achievements">
+               <li></li>
+               <li>>>Certified in Google Advanced Data Analytics</li>
+               <li>>>Experienced Embedded Systems Software Engineer</li>
+               <li>>>Proficient Smart Contract Developer</li>
+           </ul>
+
             <h2>
                 I am experienced in creating data analysis scripts that can be used for visualizations
                 and decision making. I am also working as a mechatronics engineer developing embedded
                 systems in C/C++.
             </h2>
 
-            <ul class="achievements">
-                <li>Check out my diverse range of projects and improvements over the years:</li>
-                <li>>Certified in Google Advanced Data Analytics</li>
-                <li>>Experienced Embedded Systems Software Engineer</li>
-                <li>>Proficient Smart Contract Developer</li>
-            </ul>
+
         </section>
 
         <!-- PROJECTS -->
@@ -137,6 +143,7 @@
         </a>
     </div>
 
+    <div class="project-cards">
     <div class="card highlighted-card">
         <img src="./img/projects/project_0.png" alt="">
         <h3 class="card-title">Decentralized Front-End for Smart Contract Interactions</h3>
@@ -149,6 +156,9 @@
         <div class="card-buttons">
         <a href="https://github.com/muhammadaus/ShortcutSC" class="card-button--code">Source Code</a>
     </div>
+</div>
+
+        <div class="other-cards">
 
         <div class="card">
             <h3 class="card-title">Portfolio site</h3>
@@ -171,6 +181,7 @@
     <div class="card-buttons">
         <a href="https://dune.com/kr/gmx-open-interest-analysis" class="card-button--site">Site</a>
     </div>
+</div>
 
 </section>
 
