--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
     <meta name="description" content="">
     <meta name="author" content="">
 
@@ -103,7 +103,7 @@
         <ul class="contact-details flex-list">
             <!-- <li>Address</li> -->
             <hr />
-            <li>(+8190) 9464-0637</li>
+            <li></li>
             <hr />
             <li><a href="mailto: aushijri@icloud.com" style="border: none;">aushijri@icloud.com</a></li>
         </ul>
