--- a/index.html
+++ b/index.html
@@ -90,23 +90,26 @@
                         <i class="fab fa-github"></i>
                     </a>
                 </li>
+                
+            </ul>
+            <ul class="contact-details flex-list">
+                <!-- <li>Address</li> -->
+                <li><a href="mailto: aushijri@icloud.com" style="border: none;">aushijri@icloud.com</a></li>
             </ul>
         </div>
 
         <h1>
-            My Name is &lt;Muhammad Aus&gt;<br />
-             I'm pursuing <br />
-                <strong>Full Stack/Blockchain <br /></strong>
+            My Name is
+            <br />
+            &lt;Muhammad Aus&gt; <br />
+            <br />
+                 I'm pursuing ........... <br />
+                <strong>Full Stack <br /></strong>
+                <strong>Blockchain/</strong>
             <strong>Web Development</strong>
         </h1>
 
-        <ul class="contact-details flex-list">
-            <!-- <li>Address</li> -->
-            <hr />
-            <li></li>
-            <hr />
-            <li><a href="mailto: aushijri@icloud.com" style="border: none;">aushijri@icloud.com</a></li>
-        </ul>
+
     </header>
     <main>
 
@@ -119,15 +122,15 @@
 
             <ul class="achievements">
                <li></li>
-               <li>>>Certified in Google Advanced Data Analytics</li>
-               <li>>>Experienced Embedded Systems Software Engineer</li>
-               <li>>>Proficient Smart Contract Developer</li>
+               <li>====>Certified in Google Advanced Data Analytics</li>
+               <li>====>Experienced Embedded Systems Software Engineer</li>
+               <li>====>Proficient Smart Contract Developer</li>
            </ul>
 
             <h2>
                 I am experienced in creating data analysis scripts that can be used for visualizations
                 and decision making. I am also working as a mechatronics engineer developing embedded
-                systems in C/C++.
+                systems in C.
             </h2>
 
 
@@ -150,7 +153,7 @@
         <p class="card-description">My capstone project and potentially to be a very useful tool to all EVM users and developers</p>
         <p class="card-description">This website is powered by IPFS, ReactJS and latest libraries for JSON RPC API Interactions</p>
         <div class="card-buttons">
-            <a href="https://noisy-mountain-2104.on.fleek.co/" class="card-button--site">Site</a>
+            <a href="https://shortcut-sc-nextjs-git-merge-scaffold-muhammad-aus-projects.vercel.app?_vercel_share=V6Ku1sASA6BHIVYWcSp8CiPgdWxeZVkW" class="card-button--site">Site</a>
         </div>
 
         <div class="card-buttons">
@@ -241,22 +244,16 @@
 
             <div class="skill-cards flex-center">
                 <div class="skill-card flex-center">
-                    <i class="fab fa-html5"></i>
-                </div>
-                <div class="skill-card flex-center">
-                    <i class="fab fa-css3-alt"></i>
-                </div>
-                <div class="skill-card flex-center">
                     <i class="fab fa-js-square"></i>
                 </div>
                 <div class="skill-card flex-center">
-                    <i class="fab fa-react"></i>
+                    <svg height="80px" viewBox=".5 -.2 1023 1024.1" width="80px" xmlns="http://www.w3.org/2000/svg">
+                        <path d="m478.5.6c-2.2.2-9.2.9-15.5 1.4-145.3 13.1-281.4 91.5-367.6 212-48 67-78.7 143-90.3 223.5-4.1 28.1-4.6 36.4-4.6 74.5s.5 46.4 4.6 74.5c27.8 192.1 164.5 353.5 349.9 413.3 33.2 10.7 68.2 18 108 22.4 15.5 1.7 82.5 1.7 98 0 68.7-7.6 126.9-24.6 184.3-53.9 8.8-4.5 10.5-5.7 9.3-6.7-.8-.6-38.3-50.9-83.3-111.7l-81.8-110.5-102.5-151.7c-56.4-83.4-102.8-151.6-103.2-151.6-.4-.1-.8 67.3-1 149.6-.3 144.1-.4 149.9-2.2 153.3-2.6 4.9-4.6 6.9-8.8 9.1-3.2 1.6-6 1.9-21.1 1.9h-17.3l-4.6-2.9c-3-1.9-5.2-4.4-6.7-7.3l-2.1-4.5.2-200.5.3-200.6 3.1-3.9c1.6-2.1 5-4.8 7.4-6.1 4.1-2 5.7-2.2 23-2.2 20.4 0 23.8.8 29.1 6.6 1.5 1.6 57 85.2 123.4 185.9s157.2 238.2 201.8 305.7l81 122.7 4.1-2.7c36.3-23.6 74.7-57.2 105.1-92.2 64.7-74.3 106.4-164.9 120.4-261.5 4.1-28.1 4.6-36.4 4.6-74.5s-.5-46.4-4.6-74.5c-27.8-192.1-164.5-353.5-349.9-413.3-32.7-10.6-67.5-17.9-106.5-22.3-9.6-1-75.7-2.1-84-1.3zm209.4 309.4c4.8 2.4 8.7 7 10.1 11.8.8 2.6 1 58.2.8 183.5l-.3 179.8-31.7-48.6-31.8-48.6v-130.7c0-84.5.4-132 1-134.3 1.6-5.6 5.1-10 9.9-12.6 4.1-2.1 5.6-2.3 21.3-2.3 14.8 0 17.4.2 20.7 2z"/>
+                        <path d="m784.3 945.1c-3.5 2.2-4.6 3.7-1.5 2 2.2-1.3 5.8-4 5.2-4.1-.3 0-2 1-3.7 2.1zm-6.9 4.5c-1.8 1.4-1.8 1.5.4.4 1.2-.6 2.2-1.3 2.2-1.5 0-.8-.5-.6-2.6 1.1zm-5 3c-1.8 1.4-1.8 1.5.4.4 1.2-.6 2.2-1.3 2.2-1.5 0-.8-.5-.6-2.6 1.1zm-5 3c-1.8 1.4-1.8 1.5.4.4 1.2-.6 2.2-1.3 2.2-1.5 0-.8-.5-.6-2.6 1.1zm-7.6 4c-3.8 2-3.6 2.8.2.9 1.7-.9 3-1.8 3-2 0-.7-.1-.6-3.2 1.1z"/>
+                    </svg>
                 </div>
                 <div class="skill-card flex-center">
                     <i class="fab fa-node-js"></i>
-                </div>
-                <div class="skill-card flex-center">
-                    <i class="fab fa-wordpress"></i>
                 </div>
                 <div class="skill-card flex-center">
                     <i class="fab fa-npm"></i>
@@ -315,12 +312,10 @@
             <p>
                 I am experienced in creating data analysis scripts that can be used for visualizations
                 and decision making. I am also working as a mechatronics engineer developing embedded
-                systems in C/C++.
+                systems in C.
             </p>
 
             <ul class="contact-details flex-list">
-                <li></li>
-                <li><hr /></li>
                 <li><a href="mailto: aushijri@icloud.com">aushijri@icloud.com</a></li>
             </ul>
         </section>
