update capstone link and buttons

--- a/index.html
+++ b/index.html
@@ -151,9 +151,9 @@
         <img src="./img/projects/project_0.png" alt="">
         <h3 class="card-title">Decentralized Front-End for Smart Contract Interactions</h3>
         <p class="card-description">My capstone project and potentially to be a very useful tool to all EVM users and developers</p>
-        <p class="card-description">This website is powered by IPFS, ReactJS and latest libraries for JSON RPC API Interactions</p>
+        <p class="card-description">This website is powered by ReactJS and latest libraries for JSON RPC API Interactions</p>
         <div class="card-buttons">
-            <a href="https://shortcut-sc-nextjs-git-merge-scaffold-muhammad-aus-projects.vercel.app?_vercel_share=V6Ku1sASA6BHIVYWcSp8CiPgdWxeZVkW" class="card-button--site">Site</a>
+            <a href="https://shortcut-sc-nextjs.vercel.app/" class="card-button--site">Site</a>
         </div>
 
         <div class="card-buttons">
@@ -172,17 +172,14 @@
 
 
     <div class="card"></div>
-    <h3 class="card-title">Tableau Visualization</h3>
-    <p class="card-description">Data representation that I can show based on practicality</p>
+    <h3 class="card-title">Data Analysis using various instruments</h3>
+    <p class="card-description">I use several online and offline platforms to make data visualizations. Before it is finished into a graphical product I will make data processing using SQL, Excel and Python. You can also see the code under Dune Analytics</p>
     <div class="card-buttons">
-        <a href="https://public.tableau.com/app/profile/muhammad.aus/vizzes" class="card-button--site">Site</a>
+        <a href="https://public.tableau.com/app/profile/muhammad.aus/vizzes" class="card-button--site">Tableau</a>
     </div>
-
     <div class="card"></div>
-    <h3 class="card-title">SQL with Dune Analytics</h3>
-    <p class="card-description">The most optimal way to test SQL queries with real world use cases</p>
     <div class="card-buttons">
-        <a href="https://dune.com/kr/gmx-open-interest-analysis" class="card-button--site">Site</a>
+        <a href="https://dune.com/kr/gmx-open-interest-analysis" class="card-button--site">Dune Analytics</a>
     </div>
 </div>
 
