improvise code and remove unnecessary info

--- a/index.html
+++ b/index.html
@@ -58,11 +58,6 @@
 </head>
 
 <body>
-    <div class="intro-screen">
-        <h1>Welcome to My Website!</h1>
-        <p>I'd love to hear from you if you find my work interesting</p>
-        <button id="close-intro">Show Page</button>
-    </div>
     <nav id="navbar">
         <ul>
             <li><a href="#about">About</a></li>
@@ -103,10 +98,6 @@
             <br />
             &lt;Muhammad Aus&gt; <br />
             <br />
-                 I'm pursuing ........... <br />
-                <strong>Full Stack <br /></strong>
-                <strong>Blockchain/</strong>
-            <strong>Web Development</strong>
         </h1>
 
 
@@ -164,19 +155,16 @@
         <div class="other-cards">
 
         <div class="card">
-            <h3 class="card-title">Portfolio site</h3>
-            <p class="card-description">My custom portfolio site, handcrafted with HTML, CSS, and JavaScript.</p>
+            <h3 class="card-title">Data Analysis using tableau</h3>
+            <p class="card-description">I use several online and offline platforms to make data visualizations. Before it is finished into a graphical product I will make data processing using SQL, Excel and Python.</p>
        <div class="card-buttons">
-        <a href="https://github.com/muhammadaus/Portfolio" class="card-button--code">Source Code</a>
+        <a href="https://public.tableau.com/app/profile/muhammad.aus/vizzes" class="card-button--site">Tableau</a>
        </div>
 
 
     <div class="card"></div>
-    <h3 class="card-title">Data Analysis using various instruments</h3>
-    <p class="card-description">I use several online and offline platforms to make data visualizations. Before it is finished into a graphical product I will make data processing using SQL, Excel and Python. You can also see the code under Dune Analytics</p>
-    <div class="card-buttons">
-        <a href="https://public.tableau.com/app/profile/muhammad.aus/vizzes" class="card-button--site">Tableau</a>
-    </div>
+    <h3 class="card-title">Data Analysis using Dune Analytics</h3>
+    <p class="card-description">You can also see the graphics and code under Dune Analytics</p>
     <div class="card"></div>
     <div class="card-buttons">
         <a href="https://dune.com/kr/gmx-open-interest-analysis" class="card-button--site">Dune Analytics</a>
