--- a/index.html
+++ b/index.html
@@ -141,8 +141,8 @@
     <div class="card highlighted-card">
         <img src="./img/projects/project_0.png" alt="">
         <h3 class="card-title">Decentralized Front-End for Smart Contract Interactions</h3>
-        <p class="card-description">My capstone project and potentially to be a very useful tool to all EVM users and developers</p>
-        <p class="card-description">This website is powered by ReactJS and latest libraries for JSON RPC API Interactions</p>
+        <p class="card-description">My capstone project and potentially to be a very useful tool to all EVM users and developers.</p>
+        <p class="card-description">This website is powered by ReactJS and latest libraries for JSON RPC API Interactions.</p>
         <div class="card-buttons">
             <a href="https://shortcut-sc-nextjs.vercel.app/" class="card-button--site">Site</a>
         </div>
@@ -164,7 +164,7 @@
 
     <div class="card"></div>
     <h3 class="card-title">Data Analysis using Dune Analytics</h3>
-    <p class="card-description">You can also see the graphics and code under Dune Analytics</p>
+    <p class="card-description">You can also see the graphics and code under Dune Analytics.</p>
     <div class="card"></div>
     <div class="card-buttons">
         <a href="https://dune.com/kr/gmx-open-interest-analysis" class="card-button--site">Dune Analytics</a>
