change profile picture

--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
     <header class="header">
         <div class="header-links flex-start">
             <div class="profile-container">
-                <img class="profile" src="./img/profile.jpg" alt="Joe Blow">
+                <img class="profile" src="./img/profile.png" alt="Joe Blow">
                 <img class="ring" src="./img/Ring.svg" alt="Ring Border">
             </div>
             <ul class="flex-list list-items-circle">
@@ -171,7 +171,7 @@
             <p class="experience-description">
                 I graduated from Tokyo University of Marine Science and Technology specialized
                 in Control Engineering for Mechatronics. In 2020, I started a career as a Software
-                Engineer and now, turning into a Data Analyst.
+                Engineer and now, a Fullstack Developer.
                 <img src="./img/Dot.svg" alt="Blue Dot">
             </p>
 
