--- a/index_ja.html
+++ b/index_ja.html
@@ -71,7 +71,7 @@
     <header class="header">
         <div class="header-links flex-start">
             <div class="profile-container">
-                <img class="profile" src="./img/profile.jpg" alt="ジョー・ブロー">
+                <img class="profile" src="./img/profile.png" alt="ジョー・ブロー">
                 <img class="ring" src="./img/Ring.svg" alt="リング枠">
             </div>
 
@@ -115,8 +115,8 @@
            </ul>
 
             <h2>
-                私は、可視化できるデータ分析スクリプトの作成に経験があります。
-                また、C言語で組込みシステムを開発するメカトロニクスエンジニアとしても働いています。
+                私はフルスタックWEB開発エンジニアとして様々な案件を受けています。
+                また、C言語で組込みシステムを開発するメカトロニクスエンジニアとしても働いており、可視化できるデータ分析スクリプトの作成に経験があります。
             </h2>
         </section>
 
