--- a/index_ja.html
+++ b/index_ja.html
@@ -86,7 +86,12 @@
                         <i class="fab fa-github"></i>
                     </a>
                 </li>
-                
+                <li>
+                    <a href="https://www.youtube.com/channel/UCTCESMpTiO0n0GWQ1B2jRBA">
+                        <i class="fab fa-youtube"></i>
+                    </a>
+                </li>
+            </ul>
             </ul>
             <ul class="contact-details flex-list">
                 <li><a href="mailto: aushijri@icloud.com" style="border: none;">aushijri@icloud.com</a></li>
@@ -408,6 +413,12 @@
                             <i class="fab fa-github"></i>
                         </a>
                     </li>
+                    <li>
+                        <a href="https://www.youtube.com/channel/UCTCESMpTiO0n0GWQ1B2jRBA">
+                            <i class="fab fa-youtube"></i>
+                        </a>
+                    </li>
+                </ul>
                 </ul>
             </div>
 
