fix projects layout

--- a/index.html
+++ b/index.html
@@ -147,6 +147,7 @@
        
 <section id="projects" class="section projects">
     <div class="flex-container">
+        <h2>Projects Showcase</h2>
         <div class="main-cards">
             <div class="main-card1">
                 <img src="./img/projects/default.png" alt="">
