--- a/projects.html
+++ b/projects.html
@@ -80,6 +80,7 @@
 <main>
 <section id="projects" class="section projects">
     <div class="flex-container">
+        <h2>Projects Showcase</h2>
         <div class="main-cards">
             <div class="main-card1">
                 <img src="./img/projects/default.png" alt="">
@@ -88,7 +89,6 @@
                 <p class="card-description">This website is sleek and have the highest score obtained from light house. Check it yourself.</p>
                 <div class="card-buttons">
                     <a href="https://shortcut-sc-nextjs.vercel.app/" class="card-button--site">Site</a>
-                    <a href="https://github.com/muhammadaus/ShortcutSC" class="card-button--code">Source Code</a>
                 </div>
             </div>
 
@@ -108,6 +108,7 @@
                 <h3 class="card-title">Private Social App PRVT</h3>
                 <p class="card-description">An App dedicated for builders and programmers to build reputation and nurture community.</p>
                 <div class="card-buttons">
+                    <a href="https://shortcut-sc-nextjs.vercel.app/" class="card-button--site">Site</a>
                     <a href="https://github.com/depatch/prvt" class="card-button--code">Source Code</a>
                 </div>
             </div>
