--- a/index.html
+++ b/index.html
@@ -190,19 +190,11 @@
             </div>
 
             <div class="main-card5">
-                <h3 class="card-title">Private Social App PRVT</h3>
-                <p class="card-description">An App dedicated for builders and programmers to build reputation and nurture community.</p>
-                <div class="card-buttons">
-                    <a href="https://github.com/depatch/prvt" class="card-button--code">Source Code</a>
-                </div>
+                <h3 class="card-title">Data visualizations using Tableau</h3>
             </div>
 
             <div class="main-card6">
-                <h3 class="card-title">Decentralized AMM Liquidity Pool</h3>
-                <p class="card-description">The Hackathon project for ETH Tokyo 2024 and won some notable prizes.</p>
-                <div class="card-buttons">
-                    <a href="https://github.com/muhammadaus/ShadowSwap" class="card-button--code">Source Code</a>
-                </div>
+                <h3 class="card-title"Data Pipeline using Dune SQL</h3>
             </div>
         </div>
     </div>
