--- a/index_ja.html
+++ b/index_ja.html
@@ -134,7 +134,7 @@
                 <div class="main-cards">
                     <div class="main-card1">
                         <img src="./img/projects/default.png" alt="">
-                        <h3 class="card-title">CipherLogicXYZのランディングウェブサイト</h3>
+                        <h3 class="card-title">CipherLogicXYZのホームページ</h3>
                         <p class="card-description">信頼性を持たせた最初の実世界のプロジェクトの一つ。</p>
                         <p class="card-description">Lighthouseから取得した最高のスコアを持っています。</p>
                         <div class="card-buttons">
