--- a/index.html
+++ b/index.html
@@ -155,8 +155,7 @@
                 <p class="card-description">This was one of my first real world project that I have put credibility on</p>
                 <p class="card-description">This website is sleek and have the highest score obtained from light house. Check it yourself.</p>
                 <div class="card-buttons">
-                    <a href="https://shortcut-sc-nextjs.vercel.app/" class="card-button--site">Site</a>
-                    <a href="https://github.com/muhammadaus/ShortcutSC" class="card-button--code">Source Code</a>
+                    <a href="https://cipherlogic.xyz/" class="card-button--site">Site</a>
                 </div>
             </div>
 
