--- a/index.html
+++ b/index.html
@@ -193,7 +193,7 @@
             </div>
 
             <div class="main-card6">
-                <h3 class="card-title"Data Pipeline using Dune SQL</h3>
+                <h3 class="card-title">Data Pipeline using Dune SQL</h3>
             </div>
         </div>
     </div>
