fix intro text names

--- a/index_ja.html
+++ b/index_ja.html
@@ -98,11 +98,12 @@
             </ul>
         </div>
         <h1>
-            &lt;ムハマド・アウス&gt; 
+            ムハマド・アウス
             <br />
-            と申します。<br />
+            と申します。
             <br />
-            フルスタックブロークチェーンのアプリを開発しております。
+            フルスタックブロークチェーンのアプリを<br />
+            開発しております。
         </h1>
     </header>
     <main>
