fix images and layouts

--- a/index.html
+++ b/index.html
@@ -117,7 +117,6 @@
             My Name is
             <br />
             &lt;Muhammad Aus&gt; <br />
-            <br />
             I am a Fullstack Blockchain Developer.
         </h1>
     </header>
@@ -175,6 +174,7 @@
                 <h3 class="card-title">Private Social App PRVT</h3>
                 <p class="card-description">An App dedicated for builders and programmers to build reputation and nurture community.</p>
                 <div class="card-buttons">
+                    <a href="https://ethglobal.com/showcase/prvt-ao0ze" class="card-button--site">Site</a>
                     <a href="https://github.com/depatch/prvt" class="card-button--code">Source Code</a>
                 </div>
             </div>
@@ -190,10 +190,17 @@
 
             <div class="main-card5">
                 <h3 class="card-title">Data visualizations using Tableau</h3>
+                <p class="card-description"></p>
+                <div class="card-buttons">
+                    <a href="https://public.tableau.com/app/profile/muhammad.aus/vizzes" class="card-button--site">Site</a>
+                </div>
             </div>
 
             <div class="main-card6">
                 <h3 class="card-title">Data Pipeline using Dune SQL</h3>
+                <div class="card-buttons">
+                    <a href="https://dune.com/kr/ethereum-price-action" class="card-button--site">Site</a>
+                </div>
             </div>
         </div>
     </div>
