--- a/index_ja.html
+++ b/index_ja.html
@@ -100,9 +100,8 @@
         <h1>
             ムハマド・アウス
             <br />
-            と申します。
-            <br />
-            フルスタックブロークチェーンのアプリを<br />
+            と申します。<br />
+            フルスタック<br />ブロークチェーンの<br />アプリを<br />
             開発しております。
         </h1>
     </header>
@@ -174,12 +173,16 @@
         
                     <div class="main-card5">
                         <h3 class="card-title">データビジュアライゼーションを使用したTableau</h3>
-                        <p class="card-description">Tableauを使用してデータを視覚化するプロジェクトの説明がここに入ります。</p>
+                        <div class="card-buttons">
+                            <a href="https://public.tableau.com/app/profile/muhammad.aus/vizzes" class="card-button--site">サイト</a>
+                        </div>
                     </div>
         
                     <div class="main-card6">
                         <h3 class="card-title">Dune SQLを使用したデータパイプライン</h3>
-                        <p class="card-description">Dune SQLを使用したデータパイプラインプロジェクトの説明がここに入ります。</p>
+                        <div class="card-buttons">
+                            <a href="https://dune.com/kr/ethereum-price-action" class="card-button--site">サイト</a>
+                        </div>
                     </div>
                 </div>
             </div>
