--- a/index.html
+++ b/index.html
@@ -190,7 +190,7 @@
 
             <div class="main-card5">
                 <h3 class="card-title">Data visualizations using Tableau</h3>
-                <p class="card-description"></p>
+                <p class="card-description">Visualizations based on collected data that can be turned into dashboards.</p>
                 <div class="card-buttons">
                     <a href="https://public.tableau.com/app/profile/muhammad.aus/vizzes" class="card-button--site">Site</a>
                 </div>
@@ -198,6 +198,7 @@
 
             <div class="main-card6">
                 <h3 class="card-title">Data Pipeline using Dune SQL</h3>
+                <p class="card-description">My main procedure is to store data in a database and fetch using SQL syntax which is demonstrated here</p>
                 <div class="card-buttons">
                     <a href="https://dune.com/kr/ethereum-price-action" class="card-button--site">Site</a>
                 </div>
