--- a/index_ja.html
+++ b/index_ja.html
@@ -173,6 +173,7 @@
         
                     <div class="main-card5">
                         <h3 class="card-title">データビジュアライゼーションを使用したTableau</h3>
+                        <p class="card-description">収集したデータを視覚化してダッシュボードに作成できます。</p>
                         <div class="card-buttons">
                             <a href="https://public.tableau.com/app/profile/muhammad.aus/vizzes" class="card-button--site">サイト</a>
                         </div>
@@ -180,6 +181,7 @@
         
                     <div class="main-card6">
                         <h3 class="card-title">Dune SQLを使用したデータパイプライン</h3>
+                        <p class="card-description">SQLのコマンドを用いてデータベースから情報収集、グラフ化の例です。</p>
                         <div class="card-buttons">
                             <a href="https://dune.com/kr/ethereum-price-action" class="card-button--site">サイト</a>
                         </div>
