update one project

--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
         <!-- PROJECTS -->
 
        
-<section id="projects" class="section projects">
+        <section id="projects" class="section projects">
     <div class="flex-container">
         <h2>Projects Showcase</h2>
         <div class="main-cards">
@@ -159,6 +159,16 @@
             </div>
 
             <div class="main-card2">
+                <img src="./img/projects/project_6.png" alt="">
+                <h3 class="card-title">Rent2Own</h3>
+                <p class="card-description">Taiko The Grant Factory Hackathon Project: a decentralized platform that allows users to rent NFTs with the option to own them after fulfilling payment obligations.</p>
+                <div class="card-buttons">
+                    <a href="https://rent-2-own-nextjs.vercel.app/" class="card-button--site">Site</a>
+                    <a href="https://github.com/muhammadaus/Rent2Own" class="card-button--code">Source Code</a>
+                </div>
+            </div>
+
+            <div class="main-card3">
                 <img src="./img/projects/project_0.png" alt="">
                 <h3 class="card-title">Decentralized Front-End for Smart Contract Interactions</h3>
                 <p class="card-description">My capstone project and potentially to be a very useful tool to all EVM users and developers.</p>
@@ -169,8 +179,9 @@
                 </div>
             </div>
 
-            <div class="main-card3">
+            <div class="main-card4">
                 <img src="./img/projects/project_5.png" alt="">
+                <img src="./img/projects/project_5_2.png" alt="">
                 <h3 class="card-title">Private Social App PRVT</h3>
                 <p class="card-description">An App dedicated for builders and programmers to build reputation and nurture community.</p>
                 <div class="card-buttons">
@@ -179,7 +190,7 @@
                 </div>
             </div>
 
-            <div class="main-card4">
+            <div class="main-card5">
                 <img src="./img/projects/project_4.png" alt="">
                 <h3 class="card-title">Decentralized AMM Liquidity Pool</h3>
                 <p class="card-description">The Hackathon project for ETH Tokyo 2024 and won some notable prizes.</p>
@@ -188,19 +199,13 @@
                 </div>
             </div>
 
-            <div class="main-card5">
-                <h3 class="card-title">Data visualizations using Tableau</h3>
-                <p class="card-description">Visualizations based on collected data that can be turned into dashboards.</p>
-                <div class="card-buttons">
-                    <a href="https://public.tableau.com/app/profile/muhammad.aus/vizzes" class="card-button--site">Site</a>
-                </div>
-            </div>
-
             <div class="main-card6">
-                <h3 class="card-title">Data Pipeline using Dune SQL</h3>
-                <p class="card-description">My main procedure is to store data in a database and fetch using SQL syntax which is demonstrated here</p>
+                <h3 class="card-title">Data Analytics Projects</h3>
+                <p class="card-description">Visualizations based on collected data that can be turned into dashboards using Tableau.</p>
+                <p class="card-description">Data pipeline implementation using Dune SQL for database management and querying.</p>
                 <div class="card-buttons">
-                    <a href="https://dune.com/kr/ethereum-price-action" class="card-button--site">Site</a>
+                    <a href="https://public.tableau.com/app/profile/muhammad.aus/vizzes" class="card-button--site">Tableau</a>
+                    <a href="https://dune.com/kr/ethereum-price-action" class="card-button--site">Dune</a>
                 </div>
             </div>
         </div>
