--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@
                 <img src="./img/projects/default.png" alt="">
                 <h3 class="card-title">Landing website for CipherLogicXYZ</h3>
                 <p class="card-description">This was one of my first real world project that I have put credibility on</p>
-                <p class="card-description">This website is sleek and have the highest score obtained from light house. Check it yourself.</p>
+                <p class="card-description">This website is sleek and have the highest score obtained from light house.</p>
                 <div class="card-buttons">
                     <a href="https://cipherlogic.xyz/" class="card-button--site">Site</a>
                 </div>
@@ -161,7 +161,7 @@
             <div class="main-card2">
                 <img src="./img/projects/project_6.png" alt="">
                 <h3 class="card-title">Rent2Own</h3>
-                <p class="card-description">Taiko The Grant Factory Hackathon Project: a decentralized platform that allows users to rent NFTs with the option to own them after fulfilling payment obligations.</p>
+                <p class="card-description">Taiko The Grant Factory Project: a decentralized platform that allows users to rent NFTs with the option to own them after fulfilling payment obligations.</p>
                 <div class="card-buttons">
                     <a href="https://rent-2-own-nextjs.vercel.app/" class="card-button--site">Site</a>
                     <a href="https://github.com/muhammadaus/Rent2Own" class="card-button--code">Source Code</a>
@@ -200,6 +200,7 @@
             </div>
 
             <div class="main-card6">
+                <img src="./img/projects/project_7.png" alt="">
                 <h3 class="card-title">Data Analytics Projects</h3>
                 <p class="card-description">Visualizations based on collected data that can be turned into dashboards using Tableau.</p>
                 <p class="card-description">Data pipeline implementation using Dune SQL for database management and querying.</p>
