--- a/index.html
+++ b/index.html
@@ -267,7 +267,7 @@
                         <li class="card-list-item">Graduated with 3.70 GPA</li>
                         <li class="card-list-item">Focused on Control Engineering for Mechatronics</li>
                     </ul>
-                </div><
+                </div>
             </div>
             
             
@@ -446,7 +446,6 @@
                             <i class="fab fa-youtube"></i>
                         </a>
                     </li>
-                </ul>
                 </ul>
 
             </div>
